RESOLVED FIXED235632
[MacOS] WebRTC Audio route does not react to default system output changes when VPIO is used
https://bugs.webkit.org/show_bug.cgi?id=235632
Summary [MacOS] WebRTC Audio route does not react to default system output changes wh...
youenn fablet
Reported 2022-01-26 00:53:18 PST
Attachments
Patch (5.88 KB, patch)
2022-01-26 01:20 PST, youenn fablet
no flags
youenn fablet
Comment 1 2022-01-26 01:20:03 PST
Radar WebKit Bug Importer
Comment 2 2022-01-26 08:37:41 PST
EWS
Comment 3 2022-01-26 08:43:21 PST
Committed r288620 (246439@main): <https://commits.webkit.org/246439@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450004 [details].
Note You need to log in before you can comment on or make changes to this bug.